Refs #238 Minor refactorings
Minor code refactorings in preparation for adding the feature of
baking source files in parallel (cf. #234).